--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.95.2
+fastapi>=0.95.0
 uvicorn==0.22.0
 requests==2.31.0
-pydantic==1.10.7
+pydantic>=2.0
 python-dotenv==1.0.0
 pytest==7.4.0
+
 httpx==0.24.1
