--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-fastapi>=0.95.0
+fastapi==0.95.2
 uvicorn==0.22.0
-requests==2.31.0
-pydantic>=2.0
-python-dotenv==1.0.0
-pytest==7.4.0
 httpx==0.24.1
-beautifulsoup4==4.12.0  # Добавьте эту строку
-slowapi==0.1.8
-
+beautifulsoup4==4.12.2
+slowapi==0.1.7
+fastapi-cache2==0.2.0
+pydantic==1.10.7
